@startuml

class SistemaControl {
    - Ascensor ascensor
    - List<Piso> pisos
    - List<Integer> solicitudes
    - List<BotonAscensor> botonAscensor
    - boolean obstaculoDetectado
    - boolean puertasAbiertas
    - Boton botonSubida
    - Boton botonBajada
    - Boton BotonEmergencia
}

class Ascensor {
    // Atributos y métodos
}

class Piso {
    // Atributos y métodos
}

abstract class Boton {
    - String tipo
    - boolean iluminado
    - boolean sonido
    + Boton(String tipo)
    + void presionar()
}

class BotonPiso extends Boton {
    // Atributos y métodos
}

class BotonEmergencia extends Boton {
    - boolean estadoEmergencia
    + BotonEmergencia(boolean estado)
    + void activarEmergencia()
}

class BotonAscensor extends Boton {
    // Atributos y métodos
}

SistemaControl --> Ascensor
SistemaControl --> Piso
SistemaControl --> BotonAscensor
SistemaControl --> Boton
BotonPiso --> Boton
BotonEmergencia --> Boton
BotonAscensor --> Boton

@enduml